--- a/fractald-docker/data/bitcoin.conf
+++ b/fractald-docker/data/bitcoin.conf
@@ -6,8 +6,8 @@ server=1
 rpcallowip=0.0.0.0/0
 rpcbind=0.0.0.0
 rpcport=8332
-rpcuser=fractalbitcoin
-rpcpassword=fractalbitcoin_1234567
+rpcuser=jundobitcoin
+rpcpassword=jundo_1234567
 rpcworkqueue=512
 rpcthreads=32
 rpcservertimeout=60
